overflow-x bug fix

--- a/main.css
+++ b/main.css
@@ -30,12 +30,18 @@ dd {
 }
 
 /* Set core body defaults */
+.wrapper {
+  width: 100vw;
+  overflow-x: hidden;
+  position: relative;
+}
+
 body {
   min-height: 100vh;
   scroll-behavior: smooth;
   text-rendering: optimizeSpeed;
   line-height: 1.5;
-  overflow-x: hidden;
+  /* overflow-x: clip; */
 }
 
 /* Remove list styles on ul, ol elements with a class attribute */
